footer and about us update

--- a/contacto/index.php.html
+++ b/contacto/index.php.html
@@ -23,7 +23,7 @@
           <a class="navbar-brand" href="#">
             <img
             class="logo"
-            src="imagen/NH.jpg"
+            src="imagen/logo.png"
             alt="BootstraPro Prp"
             width="170"
             height=" 60"
